# SFML_Experiments

./: .gitignore  CMakeLists.txt  create_vsfiles.bat
include/: utils.h
include/UI/: button.h  ui.h  widget.h
lib/: sfml-graphics.lib  sfml-system.lib  sfml-window.lib
src/: button.cpp  main.cpp  ui.cpp  widget.cpp
